tests/kyverno-policies/restrict-storageclass/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-storageclass
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: restrict-storageclass
    rule: webservice-pvc-storageclass
    resources:
      - paas-staff-pvc-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: restrict-storageclass
    rule: webservice-pvc-storageclass
    resources:
      - webservice-pvc-pass
      - webservice-pvc-pass-local-path
    kind: PersistentVolumeClaim
    result: pass
  - policy: restrict-storageclass
    rule: webservice-pvc-storageclass
    resources:
      - webservice-pvc-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: restrict-storageclass
    rule: paas-pvc-storageclass
    resources:
      - webservice-pvc-fail
    kind: PersistentVolumeClaim
    result: skip
  - policy: restrict-storageclass
    rule: paas-pvc-storageclass
    resources:
      - paas-staff-pvc-pass
      - paas-pvc-pass
      - paas-staff-pvc-pass-local-path
    kind: PersistentVolumeClaim
    result: pass
  - policy: restrict-storageclass
    rule: paas-pvc-storageclass
    resources:
      - webservice-pvc-pass
      - paas-staff-pvc-skip
      - paas-pvc-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: restrict-storageclass
    rule: webservice-statefulset-storageclass
    resources:
      - paas-staff-statefulset-skip
    kind: StatefulSet
    result: skip
  - policy: restrict-storageclass
    rule: webservice-statefulset-storageclass
    resources:
      - webservice-statefulset-pass
      - webservice-statefulset-pass-local-path
    kind: StatefulSet
    result: pass
  - policy: restrict-storageclass
    rule: webservice-statefulset-storageclass
    resources:
      - webservice-statefulset-fail
    kind: StatefulSet
    result: fail
  - policy: restrict-storageclass
    rule: paas-statefulset-storageclass
    resources:
      - webservice-statefulset-fail
    kind: StatefulSet
    result: skip
  - policy: restrict-storageclass
    rule: paas-statefulset-storageclass
    resources:
      - paas-staff-statefulset-pass
      - paas-statefulset-pass
      - paas-staff-statefulset-pass-local-path
    kind: StatefulSet
    result: pass
  - policy: restrict-storageclass
    rule: paas-staff-statefulset-storageclass
    resources:
      - paas-staff-statefulset-skip
      - paas-statefulset-fail
    kind: StatefulSet
    result: fail
