tests/kyverno-policies/restrict-storageclass/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: restrict-storageclass
    rules:
      - name: paas-pvc-storageclass
        values:
          allowed.paas: ["ess-nfs-client"]
          allowed.paas-staff: ["ess-nfs-client", "local-path", "paas-nfs-client"]
      - name: paas-statefulset-storageclass
        values:
          allowed.paas: ["ess-nfs-client"]
          allowed.paas-staff: ["ess-nfs-client", "local-path", "paas-nfs-client"]
    resources:
      - name: paas-staff-pvc-pass
        values:
          paasName: paas-staff
      - name: paas-pvc-pass
        values:
          paasName: paas
      - name: paas-staff-pvc-pass-local-path
        values:
          paasName: paas-staff
      - name: paas-staff-pvc-skip
        values:
          paasName: paas-staff
      - name: paas-pvc-fail
        values:
          paasName: paas
      - name: paas-staff-statefulset-pass
        values:
          paasName: paas-staff
      - name: paas-statefulset-pass
        values:
          paasName: paas
      - name: paas-statefulset-fail
        values:
          paasName: paas
      - name: paas-staff-statefulset-pass-local-path
        values:
          paasName: paas-staff
namespaceSelector:
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: paas
    labels:
      osc.edu/role: paas
      app.kubernetes.io/name: paas
  - name: paas-staff
    labels:
      osc.edu/role: paas
      app.kubernetes.io/name: paas-staff
